chore: Dokumentation und Beispiele